--- a/project.properties
+++ b/project.properties
@@ -12,4 +12,5 @@
 
 # Project target.
 target=android-18
-android.library.reference.1=../google-play-services_lib
+android.library.reference.1=..\\google-play-services_lib
+android.library.reference.2=google_play_services/google-play-services_lib
