--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <meta-data
     		android:name="com.google.android.maps.v2.API_KEY"
     		android:value="AIzaSyD89BEe2J3uQoPAjg0umquPfsYLM2DSSkE"/>
+        <meta-data android:name="android.app.searchable"
+            android:resource="@xml/activity_averse" />
         <activity
             android:name="com.example.taxisecurity.MainActivity"
             android:label="@string/app_name" >
