--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -16,6 +16,7 @@
      <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
      <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
      <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+     <uses-permission android:name="android.permission.SEND_SMS"/>
 
     <application
         android:allowBackup="true"
@@ -45,6 +46,8 @@
         <activity android:name="policeDetailActivity"></activity>
         <activity android:name="helpActivity"></activity>
         <activity android:name="mapActivity"></activity>
+        <service android:name="smsService"></service>
+        <activity android:name="testServiceActivity"></activity>
     </application>
 
 </manifest>
