--- a/project.properties
+++ b/project.properties
@@ -11,6 +11,6 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-18
+target=Google Inc.:Google APIs:18
 android.library.reference.1=..\\google-play-services_lib
 android.library.reference.2=google_play_services/google-play-services_lib
