--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -44,7 +44,9 @@
         </activity>
         <activity android:name="aboutActivity"></activity>
         <activity android:name="AverseActivity"></activity>
-        <activity android:name="timeAllocatorActivity"></activity>
+        <activity android:name="timeAllocatorActivity"
+            android:launchMode="singleTop"
+            ></activity>
         <activity android:name="Police_Details"></activity>
         <activity android:name="helpActivity"></activity>
         <activity android:name="mapActivity"></activity>
