--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -53,6 +53,9 @@
         
 		<activity android:name="SharedPreference"></activity>
         <activity android:name="PlacesAutocompleteActivity"></activity>
+        <activity android:name="loginActivity"></activity>
+        <activity android:name="contactsActivity"></activity>
+        
 		<activity android:name="Second"></activity>
         <service android:name="smsService"></service>
         <activity android:name="endSMSActivity" android:theme="@style/Theme.Transparent"></activity>
