--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -62,7 +62,9 @@
 		<activity android:name="Second"></activity>
 		<service android:name="smsService"></service>
         <activity android:name="endSMSActivity" android:theme="@style/Theme.Transparent"></activity>
-        
+        <service android:name="policeGeofencing"></service>
+        <activity android:name="geofenceObject"></activity>
+        <service android:name="ReceiveTransitionsIntentService"></service>
 
 
     </application>
