--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -68,6 +68,7 @@
 		
         <activity android:name="endSMSActivity" android:theme="@style/Theme.Transparent"></activity>
         <activity android:name="endAverseActivity" android:theme="@style/Theme.Transparent"></activity>
+        <activity android:name="averseAlertActivity" android:theme="@style/Theme.Transparent"></activity>
         <service android:name="policeGeofencing"></service>
         <activity android:name="geofenceObject"></activity>
         <service android:name="ReceiveTransitionsIntentService"></service>
