--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,7 +34,7 @@
         <meta-data android:name="android.app.searchable"
             android:resource="@xml/activity_averse" />
         <activity
-            android:name="com.example.taxisecurity.Main"
+            android:name="com.example.taxisecurity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -43,7 +43,7 @@
             </intent-filter>
         </activity>
         <activity android:name="aboutActivity"></activity>
-        <activity android:name="MainActivity"></activity>
+        
         <activity android:name="Contacts"></activity>
         <activity android:name="AverseActivity"></activity>
         <activity android:name="timeAllocatorActivity"
