--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
      <uses-permission android:name="android.permission.SEND_SMS"/>
      <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
      <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
     <application
         android:allowBackup="true"
