--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,7 @@
      <uses-permission android:name="android.permission.SEND_SMS"/>
      <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
      <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+     <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION"/>
 
     <application
         android:allowBackup="true"
@@ -43,6 +44,8 @@
             </intent-filter>
         </activity>
         <activity android:name="aboutActivity"></activity>
+        
+        <activity android:name="Contacts"></activity>
         <activity android:name="AverseActivity"></activity>
         <activity android:name="timeAllocatorActivity"
             android:launchMode="singleTop"
@@ -64,9 +67,11 @@
 		<activity android:name="Second"></activity>
 		<service android:name="smsService"></service>
 		
-		
+		<service android:name="averseService"></service>
 		
         <activity android:name="endSMSActivity" android:theme="@style/Theme.Transparent"></activity>
+        <activity android:name="endAverseActivity" android:theme="@style/Theme.Transparent"></activity>
+        <activity android:name="averseAlertActivity" android:theme="@style/Theme.Transparent"></activity>
         <service android:name="policeGeofencing"></service>
         <activity android:name="geofenceObject"></activity>
         <service android:name="ReceiveTransitionsIntentService"></service>
