--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -68,6 +68,7 @@
 		<service android:name="smsService"></service>
 		
 		<service android:name="averseService"></service>
+		<service android:name="MyLocation"></service>
 		
         <activity android:name="endSMSActivity" android:theme="@style/Theme.Transparent"></activity>
         <activity android:name="endAverseActivity" android:theme="@style/Theme.Transparent"></activity>
