--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -66,7 +66,7 @@
         <activity android:name="DisplayList"></activity>
 		<activity android:name="Second"></activity>
 		<service android:name="smsService"></service>
-		
+		<activity android:name="com.example.taxisecurity.contactDetails"></activity>
 		<service android:name="averseService"></service>
 		<service android:name="MyLocation"></service>
 		
