--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -64,7 +64,7 @@
         </activity>
         	
         <activity android:name="contactsActivity"></activity>
-        <activity android:name="DisplayList"></activity>
+        <activity android:name="PoliceDisplayList"></activity>
 		<activity android:name="Second"></activity>
 		<service android:name="smsService"></service>
 		<activity android:name="com.example.taxisecurity.contactDetails"></activity>
