--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -77,6 +77,9 @@
         <service android:name="policeGeofencing"></service>
         <activity android:name="geofenceObject"></activity>
         <service android:name="ReceiveTransitionsIntentService"></service>
+        <activity android:name="Stopper"></activity>
+        <activity android:name="StopTimerActivity"></activity>
+        <service android:name="MyService"></service>
 
 
     </application>
